Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8453

Alter table not returning engine errors

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.6
    • 10.1.9
    • Plugins
    • None
    • All
    • 10.1.9-3

    Description

      If HA_ERR_GENERIC error is returned from the storage engine during an alter table, I would expect that mariadb call into the storage engines error handler to get the error message.

      handler.cpp:3539
         temporary= get_error_message(error, &str);

      However alter does not do that. When alter fails (in my case it is because i am running in a clustered environment with ScaleDB and the table is in use on another node) i am getting the following error

      mysql> alter table lockwt1 add column c2_3 int;
      ERROR 1015 (HY000): Can't lock file (errno: 168 "Unknown (generic) error from engine")

      If mariadb called into the engine, a more accurate error would get returned "Table in use on another node"

      Attachments

        Activity

          People

            serg Sergei Golubchik
            michael Michael Fitzmaurice
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 40m
                40m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.