MDEV-8453 Alter table not returning engine errors

remove ~15 years old print_lock_error() function, use
handler::print_error() instead

Backport from 10.1